--- a/base.ioc
+++ b/base.ioc
@@ -566,9 +566,10 @@ STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0.LibraryCcDSPOoLibraryJjDSPOoLibrary=tr
 STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0_SwParameter=LibraryCcDSPOoLibraryJjDSPOoLibrary\:true;
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.ALIGN_TYPE_DEFINED=0
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.AZRTOS_APP_MEM_ALLOCATION_METHOD=1
-STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.IPParameters=USBXCcUSBJjUSBXJjCoreSystem,USBXCcUSBJjUSBXJjUXOoDeviceOoCoreStack,USBXCcUSBJjUSBXJjUXOoDeviceOoClassOoCDCOoACM,ThreadXCcRTOSJjThreadXJjCore,AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_APP_MEM_POOL_SIZE,UX_DEVICE_APP_MEM_POOL_SIZE,TX_TIMER_TICKS_PER_SECOND,ALIGN_TYPE_DEFINED,TX_SAFETY_CRITICAL,UX_ENFORCE_SAFE_ALIGNMENT
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.IPParameters=AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_APP_MEM_POOL_SIZE,UX_DEVICE_APP_MEM_POOL_SIZE,TX_TIMER_TICKS_PER_SECOND,ALIGN_TYPE_DEFINED,TX_SAFETY_CRITICAL,UX_ENFORCE_SAFE_ALIGNMENT,ThreadXCcRTOSJjThreadXJjCore,USBXCcUSBJjUSBXJjCoreSystem,USBXCcUSBJjUSBXJjUXOoDeviceOoCoreStack,USBXCcUSBJjUSBXJjUXOoDeviceOoClassOoCDCOoACM,TX_ENABLE_STACK_CHECKING
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.TX_APP_MEM_POOL_SIZE=20480
+STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.TX_ENABLE_STACK_CHECKING=1
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.TX_SAFETY_CRITICAL=0
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.TX_TIMER_TICKS_PER_SECOND=1000
 STMicroelectronics.X-CUBE-AZRTOS-F4.1.1.0.ThreadXCcRTOSJjThreadXJjCore=true
