--- a/base.ioc
+++ b/base.ioc
@@ -140,8 +140,9 @@ I2C2.I2C_Mode=I2C_Fast
 I2C2.IPParameters=I2C_Mode
 I2C3.I2C_Mode=I2C_Fast
 I2C3.IPParameters=I2C_Mode
-IWDG.IPParameters=Reload
-IWDG.Reload=500
+IWDG.IPParameters=Reload,Prescaler
+IWDG.Prescaler=IWDG_PRESCALER_128
+IWDG.Reload=249
 KeepUserPlacement=false
 Mcu.CPN=STM32F407IGH6
 Mcu.Family=STM32F4
